fix: stretch items

--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
+    text-align: center;
+    margin: 0px;
 }
 
 .header, .hero, .footer {
